# stack-practice

./: .gitignore  Cargo.toml  LICENSE.txt
assets/: default.kick-table  default.shape-table  default.tables
assets/shaders/: drop_shadow.wgsl  matrix.wgsl
custom_tests/: shape_tests.rs  texture_tests.rs
examples/: system_graph.rs
src/: animation.rs  assets.rs  board.rs  controller.rs  display.rs  image_tools.rs  lib.rs  main.rs  screens.rs  state.rs
src/assets/: image_tools.rs  matrix_material.rs  tables.rs
src/assets/tables/: kick_table.rs  shape_table.rs  sprite_table.rs
src/board/: controller.rs  display.rs  drop_shadow.rs  queue.rs  record.rs  replay.rs  update.rs
src/board/display/: active.rs  floor.rs  hold.rs  matrix.rs  matrix_material.rs  queue.rs
src/display/: active.rs  floor.rs  hold.rs  matrix.rs  queue.rs
src/progress_bar/: mod.rs  progress_shader.wgsl
src/replay/: mod.rs  record.rs  replay.rs
