[package]
name = "quickstacking"
version = "0.1.0"
edition = "2021"

[[test]]
name="texture_tests"
path="custom_tests/texture_tests.rs"
harness=false

[[test]]
name="shape_tests"
path="custom_tests/shape_tests.rs"
harness=false

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
if_chain = "1.0.2"
ron = "0.8.1"
serde = "1.0.193"
tap = "1.0.1"
tracing = "0.1.40"
